--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ button.sign-up {
     border-radius: 8px;
 }
 
-img {
+.top-bottom-section img {
     height: 200px;
     width: 500px;
 }
@@ -56,4 +56,14 @@ ul {
 ul a {
     text-decoration: none;
     color: #F9FAF8;
+}
+
+.info-section h2 {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.info-image img {
+    width: 200px;
+    height: 200px;
 }
