--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,11 @@ body {
     align-items: center;
     background-color: #1F2937;
     color: #F9FAF8;
+    padding: 0 30px;
 }
 
 .logo {
-    font-weight: bold;
+    font-weight: 1000;
     font-size: 1.25rem;
 }
 
@@ -28,25 +29,44 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 100px 0;
+    gap: 30px;
 }
 
 .top-left {
     flex: 1;
-    max-width: 530px;
 }
 
 button.sign-up {
     background-color: #3882F6;
     color: #F9FAF8;
-    padding: 8px 24px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    padding: 6px 32px;
     border: none;
     border-radius: 8px;
 }
 
 .top-bottom-section img {
-    height: 200px;
-    width: 400px;
+    height: auto;
+    max-height: 250px;
+    max-width: 500px;
+    object-fit: none;
     flex-shrink: 0;
+    box-shadow: 0px 0px 3px black;
+    flex: 1;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: 1000;
+    margin: 0;
+}
+
+.top-left p {
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 header,
@@ -64,12 +84,22 @@ ul {
     gap: 20px;
 }
 
+ul {
+    padding: 0;
+}
 ul a {
     text-decoration: none;
     color: #F9FAF8;
 }
 
+.info-section {
+    margin: 0 30px;
+}
+
 .info-section h2 {
+    font-size: 36px;
+    font-weight: 1000;
+    color: #1F2937;
     text-align: center;
     margin-top: 30px;
     margin-bottom: 40px;
@@ -77,6 +107,7 @@ ul a {
 
 .info-images {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 50px;
 }
