--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,10 @@ ul a {
 .action-box .sign-up {
     border: 2px solid white;
 }
+
+footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    padding: 30px 0;
+    text-align: center;
+}
