Set info imgs to object-fit: cover

--- a/styles.css
+++ b/styles.css
@@ -123,6 +123,7 @@ ul a {
     height: 200px;
     border: 4px solid #4f92ff;
     border-radius: 20px;
+    object-fit: cover;
 }
 
 .info-image p {
